5275: Tidy up test data